--- a/.env
+++ b/.env
@@ -5,3 +5,5 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://postgres:damian27@localhost:5432/Restaurante"
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_d2lyZWQtb3JjYS05LmNsZXJrLmFjY291bnRzLmRldiQ
+CLERK_SECRET_KEY=sk_test_TiB39gAD8JcuaBGk7wAFyAPxxYYTotYxIbOePVo9Lg
