--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.18",
+    "@heroicons/react": "^2.1.1",
+    "@nextui-org/react": "^2.2.9",
     "@prisma/client": "^5.9.0",
+    "bootstrap": "^5.3.2",
+    "framer-motion": "^11.0.3",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18"
@@ -20,6 +25,6 @@
     "eslint-config-next": "14.1.0",
     "postcss": "^8",
     "prisma": "^5.9.0",
-    "tailwindcss": "^3.3.0"
+    "tailwindcss": "^3.4.1"
   }
 }
