--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
+DATABASE_URL="postgresql://postgres:damian27@localhost:5432/Restaurante"
+
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_c2F2aW5nLXBlcmNoLTY5LmNsZXJrLmFjY291bnRzLmRldiQ
 CLERK_SECRET_KEY=sk_test_LlZUSTQ6JSJEDSCazopqmZYyyYG7WFY5DZPgfRBrko
 # NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_bW92ZWQtYXNwLTYyLmNsZXJrLmFjY291bnRzLmRldiQ
