--- a/package.json
+++ b/package.json
@@ -16,17 +16,19 @@
     "@nextui-org/react": "^2.2.9",
     "@prisma/client": "^5.9.0",
     "bootstrap": "^5.3.2",
+    "client": "^0.0.1",
     "framer-motion": "^11.0.3",
     "next": "14.1.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "vercel": "^33.5.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
     "postcss": "^8",
-    "prisma": "^5.9.0",
+    "prisma": "^5.9.1",
     "tailwindcss": "^3.4.1"
   }
 }
