--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@clerk/nextjs": "^4.27.2",
@@ -14,21 +15,20 @@
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.1",
     "@nextui-org/react": "^2.2.9",
-    "@prisma/client": "^5.9.0",
+    "@prisma/client": "^5.6.0",
     "bootstrap": "^5.3.2",
     "client": "^0.0.1",
     "framer-motion": "^11.0.3",
     "next": "14.1.0",
+    "prisma": "^5.9.1",
     "react": "^18",
-    "react-dom": "^18",
-    "vercel": "^33.5.0"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
     "postcss": "^8",
-    "prisma": "^5.9.1",
     "tailwindcss": "^3.4.1"
   }
 }
